--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="heading">
-            <span>Your Headline</span>
+            <span>Bubenshi Mike</span>
         </div>
 
         <ul>
