--- a/index.html
+++ b/index.html
@@ -6,38 +6,74 @@
     <title>Bubenshi Mike</title>
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <nav>
-        <div class="heading">
-            <span>Bubenshi Mike</span>
-        </div>
-
-        <ul>
-            <li>
-                <a href="#home">Home</a>
-            </li>
-            <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#experiences">Exprience</a>
-            </li>
-            <li>
-                <a href="#portfolio">Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="container-fluid">
+        <nav>
+            <div class="heading">
+                <span>Bubenshi Mike</span>
+            </div>
+    
+            <ul>
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#skills">Skills</a>
+                </li>
+                <li>
+                    <a href="#experiences">Exprience</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
     <main>
-        <section id="home" style="--color: #DC143C;"></section>
+        <section id="home">
+            <div class="site-blocks">
+                <div class="img-wrap">
+                    <div class="owl-carousel slide-item hero">
+                        <div class="slide">
+                            <img src="" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="" alt="">
+                        </div>
+                        <div class="slide">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 ml-auto align-self-center">
+                            <div class="intro">
+                                <div class="head">
+                                    <h1>BUBENSHI MIKE.</h1>
+                                </div>
+                                <div class="text">
+                                    <p class="md-5 sub-text">Enthusiastic, Determined and Energetic Qualified Computer Engineer.</p>
+                                    <p><a href="#contact" class="btn btn-outline-primary btn-md">Hire Me</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="about" style="--color: #008080;"></section>
         <section id="skills" style="--color: #006400;"></section>
         <section id="experiences" style="--color: #87CEEB;"></section>
@@ -47,5 +83,6 @@
     <script src="js/style.js" charset="utf-8"></script>
     <script src="js/bootstrap.min.js" charset="utf-8"></script>
     <script src="js/jquery-3.4.1.min.js" charset="utf-8"></script>
+    <script src="js/owl.carousel.min.js"></script>
 </body>
 </html>
