--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <div class="img-wrap">
                     <div class="owl-carousel slide-item hero">
                         <div class="slide">
-                            <img src="" alt="">
+                            <img src="images/IMG_1789.JPG" alt="Image">
                         </div>
                         <div class="slide">
-                            <img src="" alt="">
+                            <img src="images/_+2psd.jpg" alt="Image">
                         </div>
                         <div class="slide">
-                            <img src="" alt="">
+                            <img src="images/termite.jpg" alt="Image">
                         </div>
                     </div>
                 </div>
